<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@color/fondo"
        android:fontFamily="@font/bethany_elingston"
        android:text="Control de Acceso" />

    <EditText
        android:id="@+id/controlaccesoCorreo"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/controlaccesoContrasena"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/controlaccesoUsuario"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_iniciar_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="80dp"
        android:text="@string/iniciar_sesion" />

    <Button
        android:id="@+id/btn_registrarsecontrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="100dp"
        android:text="@string/registrarse" />
    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#121111"
        android:layout_gravity="bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnhomeaureg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="hhaha"
            android:scaleType="fitXY"
            android:src="@drawable/hogar"
            android:background="@color/transparente"/>


        <ImageButton
            android:id="@+id/btnbuscaraureg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="hahshj"
            android:scaleType="fitXY"
            android:src="@drawable/busqueda"
            android:background="@color/transparente"/>

        <ImageButton
            android:id="@+id/btncrearaureg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="todo1jj"
            android:scaleType="fitXY"
            android:src="@drawable/agregar"
            android:background="@color/transparente"/>

        <ImageButton
            android:id="@+id/btnperfilaureg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="todo1"
            android:scaleType="fitXY"
            android:src="@drawable/perfil_us"
            android:background="@color/transparente"/>
    </LinearLayout>
</FrameLayout>